Reworking more fonts and spacing issues.

--- a/badlogin.css
+++ b/badlogin.css
@@ -1,17 +1,30 @@
 body {
     background: #fff;
     color: #000;
-    font-size: 10px;
-    line-height: 12px;
-    font-family: Verdana,Arial,Sans-serif;
+    font-size: 12px;
+    line-height: 14px;
+    font-family: "Lucida Grande",Verdana,Arial,Sans-serif;
+}
+
+h1 {
+    margin-left: 90px;
+    margin-top: 1em;
+}
+
+p {
+    margin-left: 90px;
+    width: 750px;
 }
 
 .container {
     height: 650px;
-    left: 0px;
-    position: absolute;
-    top: 30px;
     width: 98%;
+}
+
+#holder {
+    position: absolute;
+    top: 0px;
+    left: -10px;
 }
 
 #data {
@@ -64,10 +77,11 @@ body {
     position: relative;
     left: 90px;
     width: 90%;
+    margin-top: 3px;
 }
 
 #timeDiv > div {
-    margin-right: 12%;
+    margin-right: 11%;
     display: inline-block;
 }
 
@@ -79,7 +93,7 @@ body {
 }
 
 #popup {
-    display: block;
+    display: none;
     border: thin solid lightgray;
     padding: 0.75em;
     -webkit-border-radius: 6px;
@@ -103,9 +117,9 @@ body {
 }
 
 #maintitle {
-    position: absolute;
+    position: relative;
     top: 15px;
-    left: 65%;
+    left: 75%;
 }
 
 .red {
